--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.1",
     "description": "A lightweight combat tracker for tabletop games",
     "main": "index.js",
+    "repository": "https://github.com/ehsawyer/initiative-tracker",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
