--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "initiative-tracker",
-    "version": "1.0.1",
+    "name": "@ehsawyer/initiative-tracker",
+    "version": "1.0.2",
     "description": "A lightweight combat tracker for tabletop games",
     "main": "index.js",
     "repository": "https://github.com/ehsawyer/initiative-tracker",
