--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "repository": "https://github.com/ehsawyer/initiative-tracker",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+		"docs-html": "documentation build index.js -f html -o docs --markdown-toc",
+        "docs-md": "documentation build index.js -f md -o docs.md --markdown-toc",
+		"docs-readme": "documentation readme index.js --section=API --markdown-toc"
     },
     "author": "Ethan Sawyer",
     "license": "GPL-3.0-only",
